--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "angular-font-awesome": "^3.1.2",
+    "angular-split": "^13.2.0",
     "bootstrap": "^5.2.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
