--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "angular-font-awesome": "^3.1.2",
     "angular-split": "^13.2.0",
     "bootstrap": "^5.2.0",
+    "chart.js": "^3.6.0",
     "font-awesome": "^4.7.0",
+    "ng2-charts": "^4.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
